# compiler-playground

./: .gitignore  dune-project  flake.nix  playground.opam
.github/workflows/: ci.yml
lib/ast/: baseAst.ml  baseAst.mli  cAst.ml  cAst.mli  explicitAst.ml  operators.ml  operators.mli  typedAst.ml  typedAst.mli  types.ml  types.mli
lib/parse/: dune  lexer.mll  parser.mly
lib/visitor/: blockLinearizer.ml  blockLinearizer.mli  blockSimplifier.ml  blockSimplifier.mli  cDesugarWhile.ml  cDesugarWhile.mli  cPrinter.ml  cPrinter.mli  cTranslator.ml  cTranslator.mli  dune  explicitPrinter.ml  explicitPrinter.mli  expliciter.ml  expliciter.mli  globalScoper.ml  globalScoper.mli  ifScoper.ml  ifScoper.mli  innerScoper.ml  innerScoper.mli  prettyPrinter.ml  prettyPrinter.mli  renamer.ml  renamer.mli  typeChecker.ml  typeChecker.mli  typePrinter.ml  typePrinter.mli
runtime/c/: Makefile  runtime.c  runtime.h
tests/: conftest.py  dune  test_base.ml  test_base.py  test_c_program.ml  test_explicit.ml  test_linearized.ml  test_playground.py  test_renamed.ml  test_typed.ml
tests/files/good/: assign-var-explicit.out  assign-var-linearized.out  assign-var-typed.out  assign-var.plgr  if-linearized.out  if-typed.out  if.plgr  operations-base.out  operations-explicit.out  operations-linearized.out  operations-typed.out  operations.plgr  print-const-linearized.out  print-const-typed.out  print-var-explicit.out  print-var-renamed.out  print-var-typed.out  print-var.plgr  reassign-var-base.out  reassign-var-explicit.out  reassign-var-renamed.out  reassign-var-typed.out  scopes.plgr  (+6 more)
